Error fixing, extracting js to seperate file
Fixing some errors:
Readded throwing an error if DB connection is unsuccesful
Actually resetting the form with the reset buttons
Allowing actual setup process, fixing to post instead of get when
inputting password.

--- a/.gitattributes
+++ b/.gitattributes
@@ -22,6 +22,7 @@
 *.html -text
 *.htm -text
 *.md -text
+*.js -text
 
 +# We don't want these files in the ZIP-file, so tell GitHub to ignore them when the user click on Download ZIP
 +/.gitattributes export-ignore
