--- a/.gitattributes
+++ b/.gitattributes
@@ -24,5 +24,5 @@
 *.md -text
 *.js -text
 
-+# We don't want these files in the ZIP-file, so tell GitHub to ignore them when the user click on Download ZIP
+# We don't want these files in the ZIP-file, so tell GitHub to ignore them when the user click on Download ZIP
 +/.gitattributes export-ignore
